--- a/DbSql-service/src/main/resources/application.properties
+++ b/DbSql-service/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=dbsql-service
-server.port=8940
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
